css/styles.sass
---
---
$green: #b5e853
$linkcolor: #63c0f5
$highlight: rgba(255,145,0,0.9)
$font: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
$bg: #151515 url("../images/bkg.png") 0 0

*
  margin: 0
  padding: 0

html, body
  background: $bg
  color: #eaeaea
  font: 16px
  line-height: 1.5
  font-family: $font
  height: 100%

#outer-container
  min-height: 100%

.container
  width: 90%
  max-width: 600px
  margin: 0 auto

section
  display: block
  margin: 0 0 20px 0

section img
  max-width: 100%

h1, h2, h3, h4, h5, h6
  margin: 20px 0 20px
  font-weight: normal
  color: $green
  letter-spacing: -0.03em
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1)

a
  color: $linkcolor
  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5)

ul
  margin: 10px 0 10px 0
  li
    line-height: 1.4
    list-style: none

  li:before
    content: ">>"
    font-size: 13px
    color: $green
    margin-right: 21px
    line-height: 16px


footer
  width: 100%
  border-top: 1px dashed $green
  padding: 10px 0
  text-align: center

  position: relative
  margin-top: -25px
  height: 40px
  clear: both


header
  background: rgba(0, 0, 0, 0.1)
  width: 100%
  border-bottom: 1px dashed $green
  padding: 0
  margin: 0 0 40px 0

  h1
    font-size: 30px
    line-height: 1.5
    margin: 0 0 0 -40px
    font-weight: bold
    letter-spacing: -1px
    -webkit-font-smoothing: antialiased

    a
      color: $green
      text-decoration: none


  h1:before
    content: "./ "
    font-size: 24px

  h2
    font-size: 18px
    font-weight: 300
    color: #666

  ul.navigation
    margin: 0 0 0 0
    padding-bottom: 20px
    padding-top: 10px
    li
      padding-left: 0
      margin: 0 30px 0 0
      display: inline


.navigation
  font-size: 13px

  li:before
    content: ""
    margin: 0


ul#posts
  li.post:before
    content: ""
    margin: 0

.post-meta
  font-size: 13px
  margin-bottom: 20px

  li
    display: inline

  li:before
    content: ""
    margin: 0

  i
    color: $highlight

.post-title
  margin-bottom: 10px


#main_content
  width: 100%
  overflow: auto
  padding-bottom: 40px
  -webkit-font-smoothing: antialiased

  h1
    font-size: 30px

  h2
    font-size: 24px

  h3
    font-size: 18px

  h4
    font-size: 14px

  h5
    font-size: 12px
    text-transform: uppercase
    margin: 0 0 5px 0

  h6
    font-size: 12px
    text-transform: uppercase
    color: #999
    margin: 0 0 5px 0


  dt
    font-style: italic
    font-weight: bold


  blockquote
    color: #aaa
    padding-left: 10px
    border-left: 1px dotted #666


  pre
    background: rgba(0, 0, 0, 0.9)
    border: 1px solid rgba(255, 255, 255, 0.15)
    padding: 10px
    font-size: 14px
    color: $green
    border-radius: 2px
    -moz-border-radius: 2px
    -webkit-border-radius: 2px
    text-wrap: normal
    overflow: auto
    overflow-y: hidden


  table
    width: 100%
    margin: 0 0 20px 0


  th
    text-align: left
    border-bottom: 1px dashed $green
    padding: 5px 10px


  td
    padding: 5px 10px


  hr
    height: 0
    border: 0
    border-bottom: 1px dashed $green
    color: $green

  .btn
    display: inline-block
    background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3))
    padding: 8px 18px
    border-radius: 50px
    border: 2px solid rgba(0, 0, 0, 0.7)
    border-bottom: 2px solid rgba(0, 0, 0, 0.7)
    border-top: 2px solid rgba(0, 0, 0, 1)
    color: rgba(255, 255, 255, 0.8)
    font-family: Helvetica, Arial, sans-serif
    font-weight: bold
    font-size: 13px
    text-decoration: none
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75)
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05)


  .btn:hover
    background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8))

  .btn .icon
    display: inline-block
    width: 16px
    height: 16px
    margin: 1px 8px 0 0
    float: left


.live-stress
  font-style: italic
  color: $highlight

.twitter-timeline
  margin: 20px auto
  display: block

@media only screen and (min-device-width : 481px)
  .slicknav_menu
    display: none

@media only screen and (max-device-width : 480px)
  html, body
    font-size: 13px
    line-height: 1.3

  header
    margin-bottom: 10px
    padding: 10px

    h1
      font-size: 24px
      line-height: 1.5
      margin: 0 0 0 -5px

    h1:before
      font-size: 24px

    ul.navigation
      li
        margin: 10px 5px 0 0

  .navigation
    font-size: 12px

  ul
    li
      line-height: 1.4
      list-style: none

    li:before
      content: ">>"
      font-size: 13px
      color: $green
      margin-right: 10px

  #main_content
    h1
      font-size: 20px
    h2
      font-size: 18px
    h3
      font-size: 16px
    h4
      font-size: 14px
    h5
      font-size: 12px
    h6
      font-size: 12px

  #menu
    display: none

  .slicknav_menu
    position: absolute
    top: 10px
    right: 5px
    display: block
    width: 100%
    background: $bg

    .slicknav_nav
      padding: 10px
    .slicknav_btn
      position: absolute
      top: 10px
      right: 5px

